--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "pkg package.json && chmod +x ./dist/covid-cases-cli-linux",
+    "execute": "./dist/covid-cases-cli-linux",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": "src/index.js",
